--- a/arch/arm/configs/ace_defconfig
+++ b/arch/arm/configs/ace_defconfig
@@ -19,6 +19,7 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
+CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_ASHMEM=y
